<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="username_placeholder">Please enter your username</string>
    <string name="submit">Submit</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm password:</string>
</resources>
