<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/fieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lblUsername"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txtUsername"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/username_placeholder"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lblPassword"
                android:text="@string/password" android:layout_width="wrap_content"
                android:width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txtPassword"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fieldConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lblConfirmPassword"
                android:text="@string/confirmPassword" android:layout_width="wrap_content"
                android:width="0dp"
                android:layout_weight="25"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txtConfirmPassword"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:layout_alignRight="@id/form"/>
</RelativeLayout>
